k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "test-runner"
spec:
  ingressClassName: nginx
  rules:
    - host: "test-runner.abyssworks.dev"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "test-runner"
                port:
                  number: 80
